# reporium-events

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
local/: .env.example  .gitattributes  Makefile  README.md  docker-compose.yml
local/scripts/: run-smoke.sh  smoke.py
reporium_events/: __init__.py  build_counter.py  models.py  publisher.py  validator.py
tests/: test_models.py  test_publisher.py  test_schema_invariants.py
